# Linear-Delta-Robot

./: LICENSE  README.md
linear_delta_workspace/src/linear_delta_bringup/: CMakeLists.txt  package.xml
linear_delta_workspace/src/linear_delta_bringup/launch/: bringup.launch.py
linear_delta_workspace/src/linear_delta_control/: CMakeLists.txt  package.xml
linear_delta_workspace/src/linear_delta_control/config/: real_linear_delta_controller_manager.yaml  sim_linear_delta_controller_manager.yaml
linear_delta_workspace/src/linear_delta_control/launch/: control.launch.py
linear_delta_workspace/src/linear_delta_control/src/: motions.cpp
linear_delta_workspace/src/linear_delta_description/: CMakeLists.txt  package.xml
linear_delta_workspace/src/linear_delta_description/launch/: description.launch.py
linear_delta_workspace/src/linear_delta_description/meshes/: UNKNOWN ELEMENT.stl  ball_screw.stl  base.stl  connector.stl  dynamic_stabilizer.stl  end_effector.stl  heatbed.stl  heatbed_spring.stl  limit_switch.stl  lower_stabilizer.stl  lower_stabilizer_cover.stl  rod.stl  rod_stand.stl  stepper_motor_rotary.stl  stepper_motor_support.stl  upper_stabilizer.stl
linear_delta_workspace/src/linear_delta_description/meshes/EXTRA/: Extruder Nozzle.STL  Heat Block.STL  J Type Extruder.STL  Throat.STL  bottom.stl  effector_new_E3D_top.STL  fan_40x40x20.STL  hex thin nut chamfered gradeab_iso.STL  line-bearings.STL  socket head cap screw_iso.STL
linear_delta_workspace/src/linear_delta_description/rviz/: config.rviz
linear_delta_workspace/src/linear_delta_description/urdf/: colors.xacro  gazebo.xacro  linear_delta.ros2_control.xacro  linear_delta.urdf.xacro  linear_delta_core.xacro
linear_delta_workspace/src/linear_delta_description/urdf/parts/: base.xacro  connector.xacro  dynamic_stabilizer.xacro  end_effector.xacro  heatbed_spring.xacro  lower_ball_screw.xacro  lower_stabilizer.xacro  rod.xacro  stepper_motor.xacro  upper_ball_screw.xacro  upper_stabilizer.xacro
linear_delta_workspace/src/linear_delta_hardware/: CMakeLists.txt  package.xml  plugin_description.xml
linear_delta_workspace/src/linear_delta_hardware/include/linear_delta_hardware_plugin/: linear_delta_hardware_plugin.hpp
linear_delta_workspace/src/linear_delta_hardware/src/: linear_delta_hardware_plugin.cpp
linear_delta_workspace/src/models/: model.stl
