<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>linear_delta_hardware</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ali@todo.todo">ali</maintainer>
  <license>TODO: License declaration</license>

<buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pkg-config</build_depend>
  <depend>libserial</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>z

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
